2001-04-17  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in: changed wrong report keys.
	
2001-04-14  Chema Celorio  <chema@celorio.com>

	* time-conf.in (conf_get_replace_table): typo . duh !

	* network-conf.in: ditto
	
	* users-conf.in: add Mandrake 7.2

2001-04-14  Chema Celorio  <chema@celorio.com>

	* time-conf.in: add Mandrake 7.2
	(conf_get_replace_table): link mdk 7.2 to rh 6.2
	(conf_get_parse_table): ditto.

2001-04-11  Bradford Hovinen  <hovinen@ximian.com>

	* xml.pl.in (xst_xml_scan): Call &xst_archive_data

	* general.pl.in (xst_archive_data): Implement. Archive data with
	the Ximian archiver

	* Makefile.am ($(perl_libs)): Add substitution for bin directory

2001-04-03  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (read_fstab): Fix detection of username for SMB imports.

2001-04-03  Ravi Pratap  <ravi@che.iitm.ac.in>

	* .cvsignore : add mouse-conf.in

2001-04-02  Michael Meeks  <michael@ximian.com>

	* backends/print.pl.in: Revise to simplify

	* backends/print-conf.in: ditto.

2001-03-30  Ravi Pratap  <ravi@che.iitm.ac.in>

	* mouse-conf.in (get, set, filter) : Add
	(xst_mouse_conf_get, xml_print): Implement

2001-03-29  Ravi Pratap  <ravi@che.iitm.ac.in>

	* mouse-conf.in : Add

	* Makefile.am : Modify accordingly

2001-04-02  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Generate/parse XML suitable for displaying in e-tables.

2001-04-02  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Fixed broken report calls.

2001-04-02  Kenneth Christiansen  <kenneth@gnu.org>

        * perldoc.pl: A JavaDoc like system for Perl
	* option.pl: A module required by the above program.

2001-03-31  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_fstab): Went back underground, now rumored to
	  be living in filesys.pl.in, under the name xst_filesys_parse_fstab().

2001-03-31  Hans Petter Jansson  <hpj@ximian.com>

	* filesys.pl.in: Added. Implements parsing of fstab and mtab files,