@@ -919,6 +919,7 @@ sub xst_network_get_parse_table
 		    [ "winsserver",    \&xst_parse_ini,               SMB_CONF,     "global", "wins server" ],
 		    [ "winsuse",       \&xst_parse_ini_bool,          SMB_CONF,     "global", "wins support" ],
         [ "smbuse",        \&xst_service_sysv_get_status, "smb" ],
+        [ "smbinstalled",  \&xst_service_sysv_installed,  "smb" ],
 		    [ "dialing",       \&xst_network_dialing_get,     WVDIAL ],
 		    [ "interface",     \&xst_network_interfaces_get ]
 		    ]
@@ -952,6 +953,7 @@ sub xst_network_get_parse_table
            [ "winsserver",    \&xst_parse_ini,               SMB_CONF,     "global", "wins server" ],
            [ "winsuse",       \&xst_parse_ini_bool,          SMB_CONF,     "global", "wins support" ],
            [ "smbuse",        \&xst_service_sysv_get_status, "smb" ],
+           [ "smbinstalled",  \&xst_service_sysv_installed,  "smb" ],
            [ "dialing",       \&xst_network_dialing_get,     WVDIAL ],
            [ "interface",     \&xst_network_interfaces_get ]
            ]
